--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "chalk": "^5.3.0",
     "nuxt": "^3.11.1",
     "sass": "^1.72.0",
     "vue": "^3.4.21",
